8274950: [lworld] LoadNode::Identity optimization should not skip casts