src/hotspot/share/opto/cfgnode.cpp
@@ -1932,19 +1932,30 @@ InlineTypeBaseNode* PhiNode::push_inline_types_through(PhaseGVN* phase, bool can
     }
     assert(outcnt() == 0, "should be dead now");
   }
+  ResourceMark rm;
+  Node_List casts;
   for (uint i = 1; i < req(); ++i) {
-    Node* n = in(i)->uncast();
-    Node* other = NULL;
-    if (n->is_InlineTypeBase()) {
-      other = n;
-    } else if (phase->type(n)->is_zero_type()) {
-      other = InlineTypePtrNode::make_null(*phase, vk);
-    } else {
+    Node* n = in(i);
+    while (n->is_ConstraintCast()) {
+      casts.push(n);
+      n = n->in(1);
+    }
+    if (phase->type(n)->is_zero_type()) {
+      n = InlineTypePtrNode::make_null(*phase, vk);
+    } else if (n->is_Phi()) {
       assert(can_reshape, "can only handle phis during IGVN");
-      other = phase->transform(n->as_Phi()->push_inline_types_through(phase, can_reshape, vk, is_init));
+      n = phase->transform(n->as_Phi()->push_inline_types_through(phase, can_reshape, vk, is_init));
+    }
+    while (casts.size() != 0) {
+      // Update the cast input and let ConstraintCastNode::Ideal push it through the InlineTypePtrNode
+      Node* cast = casts.pop();
+      phase->hash_delete(cast);
+      cast->set_req(1, n);
+      n = phase->transform(cast);
+      assert(n->is_InlineTypePtr(), "Failed to push cast through InlineTypePtr");
     }
     bool transform = !can_reshape && (i == (req()-1)); // Transform phis on last merge
-    vt->merge_with(phase, other->as_InlineTypeBase(), i, transform);
+    vt->merge_with(phase, n->as_InlineTypeBase(), i, transform);
   }
   return vt;
 }
@@ -2503,7 +2514,7 @@ Node *PhiNode::Ideal(PhaseGVN *phase, bool can_reshape) {
   // Check recursively if inputs are either an inline type, constant null
   // or another Phi (including self references through data loops). If so,
   // push the inline types down through the phis to enable folding of loads.
-  if (EnableValhalla && req() > 2 && progress == NULL) {
+  if (EnableValhalla && (_type->isa_ptr() || _type->isa_inlinetype()) && req() > 2 && progress == NULL) {
     ResourceMark rm;
     Unique_Node_List worklist;
     worklist.push(this);
@@ -2520,7 +2531,13 @@ Node *PhiNode::Ideal(PhaseGVN *phase, bool can_reshape) {
           can_optimize = false;
           break;
         }
-        n = n->uncast();
+        while (n->is_ConstraintCast()) {
+          if (phase->type(n->in(1))->filter_speculative(n->bottom_type()) == Type::TOP) {
+            can_optimize = false;
+            break;
+          }
+          n = n->in(1);
+        }
         const Type* t = phase->type(n);
         if (n->is_InlineTypeBase() && n->as_InlineTypeBase()->can_merge() &&
             (vk == NULL || vk == t->inline_klass())) {
@@ -2528,7 +2545,7 @@ Node *PhiNode::Ideal(PhaseGVN *phase, bool can_reshape) {
           if (phase->find_int_con(n->as_InlineTypeBase()->get_is_init(), 0) != 1) {
             is_init = false;
           }
-        } else if (n->is_Phi() && can_reshape) {
+        } else if (n->is_Phi() && can_reshape && (n->bottom_type()->isa_ptr() || n->bottom_type()->isa_inlinetype())) {
           worklist.push(n);
         } else if (t->is_zero_type()) {
           is_init = false;
@@ -2538,6 +2555,7 @@ Node *PhiNode::Ideal(PhaseGVN *phase, bool can_reshape) {
       }
     }
     if (can_optimize && vk != NULL) {
+// TODO 8275400
 //      assert(!_type->isa_ptr() || _type->maybe_null() || is_init, "Phi not null but a possible null was seen");
       progress = push_inline_types_through(phase, can_reshape, vk, is_init);
     }
