src/hotspot/share/opto/memnode.cpp
@@ -1241,9 +1241,8 @@ Node* LoadNode::Identity(PhaseGVN* phase) {
   Node* addr = in(Address);
   intptr_t offset;
   Node* base = AddPNode::Ideal_base_and_offset(addr, phase, offset);
-  InlineTypePtrNode* vt = (base != NULL) ? base->uncast()->isa_InlineTypePtr() : NULL;
-  if (vt != NULL && offset > oopDesc::klass_offset_in_bytes()) {
-    Node* value = vt->field_value_by_offset((int)offset, true);
+  if (base != NULL && base->is_InlineTypePtr() && offset > oopDesc::klass_offset_in_bytes()) {
+    Node* value = base->as_InlineTypePtr()->field_value_by_offset((int)offset, true);
     if (value->is_InlineType()) {
       // Non-flattened inline type field
       InlineTypeNode* vt = value->as_InlineType();
